# microcontroller_hal_ref_impl

./: .gitignore  CMakeLists.txt  README.md  main.c
hal/config/gpio/: gpio_config.c  gpio_config.h
hal/docs/config/: Doxyfile
hal/docs/readme/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _r_e_a_d_m_e_8md.html  annotated.html  classes.html  constants_8h.html  constants_8h__dep__incl.map  constants_8h_source.html  dir_000007_000004.html  dir_000007_000008.html  dir_000007_000009.html  dir_09611bfee42c7efbe4e54e3d6e7b71d4.html  dir_09611bfee42c7efbe4e54e3d6e7b71d4_dep.map  dir_09611bfee42c7efbe4e54e3d6e7b71d4_dep.md5  dir_21caafba45228f186c05fb1a392270f3.html  dir_772c86483e4c589a8fe116d8f3fbbd95.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_9fb077707694d20b7a13b312a4d64457.html  dir_bd36a8115b9e41621e8e7d4447019e35.html  dir_e3a00d2b53d1f01e9b0af16ab98695fa.html  dir_e3a00d2b53d1f01e9b0af16ab98695fa_dep.map  dir_e3a00d2b53d1f01e9b0af16ab98695fa_dep.md5  dir_e3d620c6b6fdb93ed3bc6186215bde2e.html  dir_f24eab711aa752cfc5730add1c0c14c4.html  dir_f89abcb304c928c7d889aa5625570de5.html  dir_fc959acef7fc97bb65d2d00c970c95f5.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  gpio_8c.html  gpio_8c__incl.map  gpio_8c__incl.md5  gpio_8c_source.html  (+34 more)
hal/docs/readme/rtf/: constants_8h__dep__incl.md5  dir_09611bfee42c7efbe4e54e3d6e7b71d4.rtf  (+22 more)
hal/drivers/gpio/: gpio.c  gpio.h
hal/drivers/hardware/: pic12f683.h
(+34 files in other folders)
